# SimpleTrie

./: CMakeLists.txt  README.md  main.cpp  trie_dll.cpp
include/: trie.h  trie_dll.h  trie_node.h
src/: trie.cpp  trie_node.cpp
